--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-/* #2E2F42 - navy blue - текст заголовков и ссылок в навигации */
-/* #434455 - slate - основной цвет текста */
-/* #FFFFFF - белый */
-/* #E7E9FC - цвет текста в футере */
-/* #4D5AE5 - фон кнопки */
-/* #434455; - цвет контактов */
 :root {
     --primary-text-color: #434455;
     --primary-header-color: #2E2F42;
@@ -23,6 +17,21 @@
 
 .list {
     list-style: none;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+h3 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
 }
 
 
@@ -63,12 +72,15 @@
     font-weight: 400;
 }
 
+/* hero section */
+
 .hero {
     background-color: var(--primary-background-color);
     color: #FFFFFF;
     font-weight: 700;
     font-size: 56px;
     line-height: 1;
+    text-align: center;
 }
 
 .hero .hero-button {
@@ -78,20 +90,7 @@
     letter-spacing: 0.04em;
 }
 
-h2 {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 40px;
-    text-transform: capitalize;
-}
-
-h3 {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-}
-
+/* main section */
 .Features .features-title {
     color: var(--primary-header-color);
 }
@@ -99,6 +98,8 @@ h3 {
 .team {
     background-color: #F4F4FD;
 }
+
+/* footer section */
 
 .page-footer {
     background-color: var(--primary-background-color);
@@ -114,7 +115,7 @@ h3 {
 }
 
 
-/* portfolio css */
+/* portfolio page */
 
 .filter {
     background-color: #E7E9FC;
