--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 .page {
     background-color: #FFFFFF;
     color: var(--primary-text-color);
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -41,11 +41,12 @@ h3 {
 
 .logo {
     color: #000000;
-    font-family: 'Raleway';
+    font-family: Raleway, sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.3;
+    text-transform: uppercase;
 }
 
 .logo>span {
@@ -54,7 +55,7 @@ h3 {
 
 .site-nav .link {
     color: var(--primary-header-color);
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     font-style: normal;
@@ -124,6 +125,10 @@ h3 {
 
 button {
     cursor: pointer;
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
     letter-spacing: 0.04em;
 }
 
